# mtg-mcp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  Makefile  README.md  poc.py  pyproject.toml
src/: main.py
src/adapters/card_store/: __init__.py
src/adapters/card_store/postgresql/: psql.py  queries.py
src/adapters/postgres/: pool.py
src/adapters/rule_store/: __init__.py
src/adapters/rule_store/postgresql/: psql.py  queries.py
src/domain/: card.py
src/domain/interfaces/card_store/: __init__.py  interface.py
src/domain/interfaces/rule_store/: interface.py
src/domain/models/: card.py  definition.py  rule.py
