[project]
name = "mtg-mcp"
version = "0.1.0"
description = "Magic: The Gathering MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli] (>=1.14.0,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "asyncpg (>=0.30.0,<1.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "uvicorn"
]

[project.dev-dependencies]
test = [
    "pytest",
]
